# spdict

./: Cargo.toml  LICENSE  README.md
src/: main.rs  models.rs  render.rs  service.rs
